--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,8 @@ steps:
 #Update the container image using kubectl set
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
+  - '-n'
+  - '${_DEPLOYMENTNAME}'
   - 'set'
   - 'image'
   - 'deployment/${_DEPLOYMENTNAME}'
