--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,7 +36,7 @@ substitutions:
     _REPO_NAME: Demo
     
     # Developers ONLY change
-    _VERSION: latest
+    _VERSION: v2.0
     
 options:
     substitution_option: 'ALLOW_LOOSE'
