--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,27 +2,30 @@ steps:
 #First Clone from Google Cloud Source Repository  
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone','https://github.com/Brandon0204/Demo']
+- name: 'bash'
+  args: ['echo', 'I am running a bash command']
 
-#Build the image 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}','.']
 
-#Push the image  
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}']
-  
-#Update the container image using kubectl set
-- name: 'gcr.io/cloud-builders/kubectl'
-  args:
-  - '-n'
-  - '${_DEPLOYMENTNAME}'
-  - 'set'
-  - 'image'
-  - 'deployment/${_DEPLOYMENTNAME}'
-  - '${_CONTAINERNAME}=gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
+##Build the image
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['build','-t','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}','.']
+#
+##Push the image
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['push','gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}']
+#
+##Update the container image using kubectl set
+#- name: 'gcr.io/cloud-builders/kubectl'
+#  args:
+#  - '-n'
+#  - '${_DEPLOYMENTNAME}'
+#  - 'set'
+#  - 'image'
+#  - 'deployment/${_DEPLOYMENTNAME}'
+#  - '${_CONTAINERNAME}=gcr.io/${_PROJECT}/${_CONTAINERNAME}:${_VERSION}'
+#  env:
+#  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
+#  - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
   
 substitutions:
     #GCP Specific configuration. Please DON'T change anything
